# AtomsPluginExample

./: CMakeLists.txt  README.md
include/: AgentBehaviourExample.h  Globals.h
src/: AgentBehaviourExample.cpp  PluginMain.cpp
